fixed the project

--- a/src/components/AddUser/AddUserForm.module.css
+++ b/src/components/AddUser/AddUserForm.module.css
@@ -11,9 +11,10 @@
 
 .form-control input {
   font: inherit;
+  display: block;
   width: 100%;
   border: 1px solid #ccc;
-  padding: 0.5rem 1rem;
+  padding: 0.4rem 0.6rem;
 }
 
 .form-control p {
