--- a/src/components/UI/Backdrop.module.css
+++ b/src/components/UI/Backdrop.module.css
@@ -3,7 +3,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.4);
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.8);
   z-index: 50;
 }
