--- a/src/components/UI/ErrorModal.module.css
+++ b/src/components/UI/ErrorModal.module.css
@@ -1,5 +1,5 @@
-.error-modal {
-  position: absolute;
+.modal {
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -8,20 +8,24 @@
   z-index: 100;
 }
 
-.error-modal h2 {
-  margin: 0;
+.header {
+  background: #5c13d3;
   padding: 1rem;
-  color: #fff;
   border-top-left-radius: 1rem;
   border-top-right-radius: 1rem;
-  background: #5c13d3;
 }
 
-.error-modal p {
+.header h2 {
+  margin: 0;
+  color: #fff;
+}
+
+.content {
   padding: 1rem;
 }
 
-.error-modal button {
-  float: right;
-  margin: 0 1rem 1rem 0;
+.actions {
+  display: flex;
+  justify-content: flex-end;
+  padding: 1rem;
 }
